--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
-    <title>Faculty Webpage</title>
+    <title>Anjali Webpage</title>
     <style>
         body {
             font-family: Arial, sans-serif;
