--- a/index.html
+++ b/index.html
@@ -196,6 +196,14 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 <strong>Duration</strong> - 3 years, <br>
 <strong>Status</strong> - Ongoing </li>
             </ul>
+
+		<h2>My Research Awards:</h2><br
+									<ul>
+									<li><b> Young Scientist Awards</b> by Uttarakhand State Science & Technology Congress, Uttarakhand State Council for Science And Technology in 2018 for our research work (co-author <a href="https://www.iitr.ac.in/~CSE/Balasubramanian_R_">Prof. R. Balasubramanian Raman </a>) </li>
+									<li>100% CSIR FOREIGN TRAVEL GRANT for our research work in 2016 (co-author Prof. R. Balasubramanian Raman)  </li>
+									<li>GATE qualified</li>
+									<li>NET-JRF qualified </li>
+									</ul>
         </div>
 
         <!-- Administrative Tab -->
