--- a/index.html
+++ b/index.html
@@ -198,13 +198,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 <strong>Status</strong> - Ongoing </li>
             </ul>
 
-		<h2>My Research Awards:</h2><br
-									<ul>
-									<li><b> Young Scientist Awards</b> by Uttarakhand State Science & Technology Congress, Uttarakhand State Council for Science And Technology in 2018 for our research work (co-author <a href="https://www.iitr.ac.in/~CSE/Balasubramanian_R_">Prof. R. Balasubramanian Raman </a>) </li>
-									<li>100% CSIR FOREIGN TRAVEL GRANT for our research work in 2016 (co-author Prof. R. Balasubramanian Raman)  </li>
-									<li>GATE qualified</li>
-									<li>NET-JRF qualified </li>
-									</ul>
+		
         </div>
 
         <!-- Administrative Tab -->
@@ -235,9 +229,15 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 
 
  <!-- Research -->
-        <div id="admin" class="tab-content">
+        <div id="research" class="tab-content">
             <h2>Research</h2>
-
+<h2>My Research Awards:</h2><br
+									<ul>
+									<li><b> Young Scientist Awards</b> by Uttarakhand State Science & Technology Congress, Uttarakhand State Council for Science And Technology in 2018 for our research work (co-author <a href="https://www.iitr.ac.in/~CSE/Balasubramanian_R_">Prof. R. Balasubramanian Raman </a>) </li>
+									<li>100% CSIR FOREIGN TRAVEL GRANT for our research work in 2016 (co-author Prof. R. Balasubramanian Raman)  </li>
+									<li>GATE qualified</li>
+									<li>NET-JRF qualified </li>
+									</ul>
             <ul>
                <li> Warden GH-3</li>
 
