--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 
     <nav>
         <a href="#" onclick="showTab('home')">Home</a>
-<a href="#" onclick="showTab('teach')">Teaching</a>
+        <a href="#" onclick="showTab('teach')">Teaching</a> 
         <a href="#" onclick="showTab('projects')">Projects</a>
         <a href="#" onclick="showTab('admin')">Administrative Duty</a>
         <a href="#" onclick="showTab('student')">Students</a>
-        <a href="#" onclick="showTab('research')">Research</a>
+        <a href="#" onclick="showTab('research')">Research</a> 
     </nav>
 
     <main>
@@ -225,6 +225,21 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 <li>Accommodation and Food Committee member as warden in IIIT sports meet for students and employees during March 9-15, 2024. </li>
 
 </ul>
+        </div>
+ <!-- Students -->
+        <div id="students" class="tab-content">
+            <h2>Ph.D. Students</h2>
+<h2>M.Tech Students</h2><br
+									<ul>
+									<li><b> Young Scientist Awards</b> by Uttarakhand State Science & Technology Congress, Uttarakhand State Council for Science And Technology in 2018 for our research work (co-author <a href="https://www.iitr.ac.in/~CSE/Balasubramanian_R_">Prof. R. Balasubramanian Raman </a>) </li>
+									<li>100% CSIR FOREIGN TRAVEL GRANT for our research work in 2016 (co-author Prof. R. Balasubramanian Raman)  </li>
+									<li>GATE qualified</li>
+									<li>NET-JRF qualified </li>
+									</ul>
+            <ul>
+               <li> Warden GH-3</li>
+
+            </ul>
         </div>
 
 
