--- a/index.html
+++ b/index.html
@@ -245,7 +245,23 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 
  <!-- Research -->
         <div id="research" class="tab-content">
-            <h2>Research</h2>
+            
+		 <h2 class="heading mb-3">Publications in Refereed Journals (<a href="https://scholar.google.com/citations?user=1xFIJOkAAAAJ&amp;hl=en&amp;oi=ao" target="_blank" class="RNpQXe" style="width: 32px; height: 32px; margin: 6px;"><img src="images/gs.png"  class="xbGufb" style="width: 32px; height: 32px;" width="32" height="32"></a>
+)</h2>
+					<font color="black" size="2">
+					<Ol>
+						<li>
+							S. Basak, <b>A. Gautam</B>, Diffusion-based normality pre-training for weakly supervised video anomaly detection, Expert Systems with Applications, Vol. 251, pp. 124013, 2024.
+						</li>
+					<li>  <b>A. Gautam</B>, Divyesh Rana, Saksham Aggarwal, Swaraj Bhosle, Hritik Sharma, Deep Learning Approach to Automatically Recognise License Number Plates, Multimedia Tools and Applications, Vol. 82, No. 20, pp.31487-31504, 2023 </li>	
+					<li> <b>A. Gautam</B>,  Recent Advancements of Deep Learning in Detecting Breast Cancer: A Survey, Multimedia Systems, Vol. 29, No. 3, pp.917-943, 2022 </li>
+					<li> <b>A. Gautam</B>, B. Raman, <a href="https://doi.org/10.1007/s11042-021-11342-9">"Brain Strokes Classification by Extracting Quantum Information from CT Scans"</a>, Multimedia Tools and Applications, Accepted on 26th July 2021 </li>
+					<li> <b>A. Gautam</B>, B. Raman, <a href="https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/ipr2.12166">"Towards Accurate Classification of Skin Cancer from Dermatology Images"</a>, IET Image Processing, Vol. 15, No. 9, pp. 1971-1986, 2021 </li>
+					<li> <b>A. Gautam</B>, B. Raman, <a href="https://www.sciencedirect.com/science/article/pii/S1746809420303153">"Towards effective classification of brain hemorrhagic and ischemic stroke using CNN"</a>, Biomedical Signal Processing and Control, Vol. 63, pp. 102178, 2021 </li>
+					<li> <b>A. Gautam</B>, B. Raman, <a href="https://link.springer.com/article/10.1007/s10044-019-00838-8">"Local Gradient of Gradient Pattern: A Robust Image Descriptor for the Classification of Brain Strokes from Computed Tomography Images"</a>, Pattern Analysis and Applications, Vol. 23, pp. 797–817, 2020 </li>
+					<li> <b>A. Gautam</B>, B. Raman, <a href="https://link.springer.com/article/10.1007/s11042-018-6418-2">"Segmentation of Ischemic Stroke Lesion from 3D MR Images using Random Forest"</a>, Multimedia Tools and Applications, Vol. 78, No. 6, pp. 6559–6579, 2019</li>
+					 <li> <b>A. Gautam</B>, B. Raman, S. Raghuvanshi, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0208521617303704"> "A Hybrid Approach for the Delineation of Brain Lesion from CT Images" </a>, Biocybernetics and Biomedical Engineering, Vol. 38, no. 3, pp. 504-518, 2018 </li>
+					  </Ol>
 <h2>My Research Awards:</h2><br
 									<ul>
 									<li><b> Young Scientist Awards</b> by Uttarakhand State Science & Technology Congress, Uttarakhand State Council for Science And Technology in 2018 for our research work (co-author <a href="https://www.iitr.ac.in/~CSE/Balasubramanian_R_">Prof. R. Balasubramanian Raman </a>) </li>
