--- a/index.html
+++ b/index.html
@@ -227,15 +227,15 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 </ul>
         </div>
  <!-- Students -->
-        <div id="students" class="tab-content">
+        <div id="student" class="tab-content">
             <h2>Ph.D. Students</h2>
 <h2>M.Tech Students</h2><br
-									<ul>
+	<ul>
 									<li><b> Young Scientist Awards</b> by Uttarakhand State Science & Technology Congress, Uttarakhand State Council for Science And Technology in 2018 for our research work (co-author <a href="https://www.iitr.ac.in/~CSE/Balasubramanian_R_">Prof. R. Balasubramanian Raman </a>) </li>
 									<li>100% CSIR FOREIGN TRAVEL GRANT for our research work in 2016 (co-author Prof. R. Balasubramanian Raman)  </li>
 									<li>GATE qualified</li>
 									<li>NET-JRF qualified </li>
-									</ul>
+	</ul>
             <ul>
                <li> Warden GH-3</li>
 
@@ -262,6 +262,11 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 					<li> <b>A. Gautam</B>, B. Raman, <a href="https://link.springer.com/article/10.1007/s11042-018-6418-2">"Segmentation of Ischemic Stroke Lesion from 3D MR Images using Random Forest"</a>, Multimedia Tools and Applications, Vol. 78, No. 6, pp. 6559–6579, 2019</li>
 					 <li> <b>A. Gautam</B>, B. Raman, S. Raghuvanshi, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0208521617303704"> "A Hybrid Approach for the Delineation of Brain Lesion from CT Images" </a>, Biocybernetics and Biomedical Engineering, Vol. 38, no. 3, pp. 504-518, 2018 </li>
 					  </Ol>
+<h2> Papers in Top Conferences </h2>
+<ol>
+<li>Gaikwad, Avinash, and <b></b>Anjali Gautam</b>. "Segmentation of Hard Exudates And Hemorrhages from Diabetic Retinopathy Images Using Residual U-Net with Squeeze and Excite Blocks." In 2024 IEEE International Conference on Image Processing (ICIP), pp. 3064-3069. IEEE, 2024.</li>
+<li>Basak, Suvramalya, Aditya Vaishy, and <b></b>Anjali Gautam</b>. "Multi-teacher Importance Preserving Knowledge Distillation for Early Violence Prediction." In International Conference on Pattern Recognition, pp. 179-195. Cham: Springer Nature Switzerland, 2024.</li>							
+						</ol>
 <h2>My Research Awards:</h2><br
 									<ul>
 									<li><b> Young Scientist Awards</b> by Uttarakhand State Science & Technology Congress, Uttarakhand State Council for Science And Technology in 2018 for our research work (co-author <a href="https://www.iitr.ac.in/~CSE/Balasubramanian_R_">Prof. R. Balasubramanian Raman </a>) </li>
