--- a/index.html
+++ b/index.html
@@ -262,30 +262,24 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 		<div class="container">
     <!-- Scholar 1 -->
     <div class="scholar-card">
-      <img src="scholar1.jpg" alt="Research Scholar 1">
-      <h3>Dr. John Doe</h3>
-      <p>PhD in Machine Learning</p>
-      <p>Research on AI and Data Science.</p>
+      <img src="basak.jpg" alt="Research Scholar 1">
+      <h3>Suvramalya Basak</h3>      
+      <p>Research on Video Anomaly Detection</p>
     </div>
 
     <!-- Scholar 2 -->
     <div class="scholar-card">
-      <img src="scholar2.jpg" alt="Research Scholar 2">
-      <h3>Dr. Jane Smith</h3>
-      <p>PhD in Quantum Computing</p>
-      <p>Research on Quantum Algorithms.</p>
+      <img src="Ankit_Kumar_Verma.jpg" alt="Research Scholar 2">
+      <h3>Ankit Kumar Verma</h3>
+      <p>Research on Diagnosing Retinal Diseases</p>
     </div>
+			<br>
 <h2>M.Tech Students</h2><br
 	<ul>
-									<li><b> Young Scientist Awards</b> by Uttarakhand State Science & Technology Congress, Uttarakhand State Council for Science And Technology in 2018 for our research work (co-author <a href="https://www.iitr.ac.in/~CSE/Balasubramanian_R_">Prof. R. Balasubramanian Raman </a>) </li>
-									<li>100% CSIR FOREIGN TRAVEL GRANT for our research work in 2016 (co-author Prof. R. Balasubramanian Raman)  </li>
-									<li>GATE qualified</li>
-									<li>NET-JRF qualified </li>
+<li> </li>
+									
 	</ul>
-            <ul>
-               <li> Warden GH-3</li>
-
-            </ul>
+            
         </div>
 
 
