--- a/index.html
+++ b/index.html
@@ -262,17 +262,17 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 		<div class="container">
     <!-- Scholar 1 -->
     <div class="scholar-card">
-      <img src="basak.jpg" alt="Research Scholar 1">
+      <img src="images/basak.jpg" alt="Research Scholar 1">
       <h3>Suvramalya Basak</h3>      
       <p>Research on Video Anomaly Detection</p>
     </div>
 
     <!-- Scholar 2 -->
     <div class="scholar-card">
-      <img src="Ankit_Kumar_Verma.jpg" alt="Research Scholar 2">
+      <img src="images/Ankit_Kumar_Verma.jpg" alt="Research Scholar 2">
       <h3>Ankit Kumar Verma</h3>
       <p>Research on Diagnosing Retinal Diseases</p>
-    </div>
+    </div></div>
 			<br>
 <h2>M.Tech Students</h2><br
 	<ul>
