--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
       background-color: white;
       border: 1px solid #ddd;
       border-radius: 8px;
-      padding: 20px;
+      padding: 10px;
       margin: 10px;
-      width: 250px;
+      width: 150px;
       text-align: center;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
     .scholar-card img {
-      max-width: 100%;
-      border-radius: 8px;
+      max-width: 70%;
+      border-radius: 2px;
     }
     .scholar-card h3 {
       margin-top: 10px;
@@ -261,7 +261,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
     				</div>
 		 <!-- Scholar 2 -->
     				<div class="scholar-card">
-      				<img src="images/Ankit_Kumar_Verma.jpg" alt="Research Scholar 2">
+      				<img src="images/Ankit_Kumar_Verma.jpeg" alt="Research Scholar 2">
       				<h3>Ankit Kumar Verma</h3>
       				<p>Research on Diagnosing Retinal Diseases</p>
     				</div>
