--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
     				</div>
 		 <!-- Scholar 2 -->
     				<div class="scholar-card">
-      				<img src="images/Ankit_Kumar_Verma.jpeg" alt="Research Scholar 2">
+      				<img src="images/Ankit.jpg" alt="Research Scholar 2">
       				<h3>Ankit Kumar Verma</h3>
       				<p>Research on Diagnosing Retinal Diseases</p>
     				</div>
