--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 
                     <div class="faculty-member">
                        <h3>Bio</h3> 
-                        <p align="justify">I have done my M.Tech and Ph.D in the field of Medical Image Analysis from G.B. Pant Engineering College Pauri Garhwal and IIT Roorkee respectively. During Ph.D., I got a young scientist award for my work by Uttarakhand Council for Science & Technology in 2018. Before joining IIIT Allahabad, I have served DIT University Dehradun, University of Petroleum and Energy Studies (UPES) Dehradun and Women Institute of Technology Dehradun for some time. Currently, I am working on two sponsored projects funded by IIIT Allahabad and Science and Engineering Research Board (SERB).  </p>
-           <p>Click <a href="/CV.pdf">here</a> for my CV .</p>
+                        <p align="justify">I have done my M.Tech and Ph.D in the field of Medical Image Analysis from G.B. Pant Engineering College Pauri Garhwal and IIT Roorkee respectively. During Ph.D., I got a young scientist award for my work by Uttarakhand Council for Science & Technology in 2018. Before joining IIIT Allahabad, I have served DIT University Dehradun, University of Petroleum and Energy Studies (UPES) Dehradun and Women Institute of Technology Dehradun for some time. Currently, I am working on two sponsored projects funded by IIIT Allahabad and Science and Engineering Research Board (SERB).  
+           Click <a href="/CV.pdf">here</a> for my CV .</p>
 			    <h3>Research Interest</h3> 
 			    <div class="text-left mx-auto"> 
 <ul>
@@ -215,7 +215,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
             <h2>Research Projects</h2>
             <ul>
                 <li><strong>Project Title</strong> - Design and Development of Computer-Aided Diagnostic Software to Localize and Grade Eye Diseases using Deep Learning and Transformer Approaches <br>
-                    < strong>Funding Agency</strong> - EMEQ-SERB, <br>
+                    <strong>Funding Agency</strong> - EMEQ-SERB, <br>
 			<strong>Sanctioned Amount</strong> - Rs. 23,04,544, <br>
 			<strong>Duration</strong> - 3 years <br>
 			<strong>Status</strong> - Ongoing</li><br>
