--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         header {
             background-color: #7a0f65;
             color: white;
-            padding: 20px;
+            padding: 15px;
             text-align: center;
         }
 
@@ -39,7 +39,7 @@
         }
 
         main {
-            padding: 20px;
+            padding: 5px;
         }
 
         .faculty-member {
@@ -107,6 +107,39 @@
       font-size: 18px;
       color: #555;
     }
+.slideshow-container {
+  max-width: 500px;
+  position: relative;
+  margin: auto;
+}
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
     </style>
 </head>
 
@@ -122,6 +155,7 @@
         <a href="#" onclick="showTab('admin')">Administrative Duty</a>
         <a href="#" onclick="showTab('student')">Students</a>
         <a href="#" onclick="showTab('research')">Research</a> 
+	<a href="#" onclick="showTab('trip')">Foreign Trip</a> 
     </nav>
 
     <main>
@@ -310,6 +344,53 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 									</ul>
             
         </div>
+  <!-- Foriegn Trip -->
+        <div id="trip" class="tab-content">
+            <h2>Explore the World</h2>
+           
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+   <img src="tencon0.jpg"  height="450" > 
+
+  <div class="text">Singapore, TENCON-2016</div>
+</div>
+
+<div class="mySlides fade">
+   <img src="tencon1.jpg"  height="450" > 
+
+  <div class="text">Singapore, TENCON-2016</div>
+</div>
+
+<div class="mySlides fade">
+   <img src="icip24-1.jpg" style="width:100%" > 
+
+  <div class="text">Abu Dhabi, ICIP-2024</div>
+</div>
+
+<div class="mySlides fade">
+    <img src="abu0.jpg"  height="450">
+  <div class="text">Abu Dhabi, ICIP-2024</div>
+</div>
+
+<div class="mySlides fade">
+   <img src="dubai.jpg" style="width:100%" height="450">
+  <div class="text">Caption Three</div>
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+ <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+</div>
+		
+        </div>
 
     </main>
 
@@ -328,6 +409,25 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
             const activeTab = document.getElementById(tabId);
             activeTab.classList.add('active-tab');
         }
+let slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}    
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
     </script>
 </body>
 
