--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <a href="#" onclick="showTab('admin')">Administrative Duty</a>
         <a href="#" onclick="showTab('student')">Students</a>
         <a href="#" onclick="showTab('research')">Research</a> 
-	<a href="#" onclick="showTab('trip')">Foreign Trip</a> 
+	<a href="#" onclick="showTab('trip')">Foreign Trips</a> 
     </nav>
 
     <main>
@@ -351,30 +351,30 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-   <img src="tencon0.jpg"  height="450" > 
+   <img src="images/tencon0.jpg"  height="450" > 
 
   <div class="text">Singapore, TENCON-2016</div>
 </div>
 
 <div class="mySlides fade">
-   <img src="tencon1.jpg"  height="450" > 
+   <img src="images/tencon1.jpg"  height="450" > 
 
   <div class="text">Singapore, TENCON-2016</div>
 </div>
 
 <div class="mySlides fade">
-   <img src="icip24-1.jpg" style="width:100%" > 
+   <img src="images/icip24-1.jpg" style="width:100%" > 
 
   <div class="text">Abu Dhabi, ICIP-2024</div>
 </div>
 
 <div class="mySlides fade">
-    <img src="abu0.jpg"  height="450">
+    <img src="images/abu0.jpg"  height="450">
   <div class="text">Abu Dhabi, ICIP-2024</div>
 </div>
 
 <div class="mySlides fade">
-   <img src="dubai.jpg" style="width:100%" height="450">
+   <img src="images/dubai.jpg" style="width:100%" height="450">
   <div class="text">Caption Three</div>
 </div>
 
