--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 
 <div class="mySlides fade">
    <img src="images/dubai.jpg" style="width:100%" height="450">
-  <div class="text">Caption Three</div>
+  <div class="text">Dubai</div>
 </div>
 
 </div>
