--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <title>Anjali Webpage</title> 
+    <title>Anjali's Webpage</title>   
     <style>
 	    @media (max-width: 768px) { 
         body {
