--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 </div>
 
 <div class="mySlides fade">
-   <img src="images/duabi.jpg"  height="450">
+   <img src="images/dubai.jpg"  height="450">
   <div class="text">Dubai</div>
 </div>
 
