--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         nav a {
             color: white;
+  padding: 10px 10px;
             margin: 0 15px;
             text-decoration: none;
             font-size: 18px;
@@ -36,7 +37,7 @@
 
         nav a:hover {
             text-decoration: underline;
-	 background-color: #D19CC4;
+background-color: #7a0f65;
         }
 
         main {
