--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
                 <div class="updates-section">
                     <h3>Latest Updates</h3>
                     <ul align="justify">
-                        <li><strong> Internship:</strong> Offline Two Months internship in June and July (1 Seat).</li>
-                        <li><strong>Upcoming Workshop:</strong> One Day Faculty Workshop  in May or June 2025 (25 Seats).</li>
+                        <li><strong> Internship:</strong> Offline Two Months internship from 30th April  and 30th June (1 Seat), click <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCvuvoS-jNO1znKDp9EW0iDTA2riSMhXMsgziBZ-U4nfrjbw/viewform?usp=sharingf">here</a> to apply.</li>
+                        <li><strong>Upcoming Workshop:</strong> One Day Faculty Workshop  on 30th May 2025 (only 25 Seats).</li>
                     </ul>
                 </div>
 
