--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ background-color: #7a0f65;
     </nav>
 
     <main>
-<marquee> <h4 style="color:blue;">Ph.D. Position Available, Interested Candidates May Contact</h4> </marquee>
+<marquee> <h4 style="color:blue;">Ph.D. Position Available, Interested Candidates May Contact. *<a href="https://docs.google.com/forms/d/e/1FAIpQLSfCvuvoS-jNO1znKDp9EW0iDTA2riSMhXMsgziBZ-U4nfrjbw/viewform?usp=sharingf">For offline two months internship 1 Seat </a> </h4> </marquee>
         <!-- Home Tab -->
        <div id="home" class="tab-content active-tab">
                         <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
