--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
                 <div class="updates-section">
                     <h3>Latest Updates</h3>
                     <ul align="justify">
-                        <li><strong> Internship:</strong> Offline Two Months internship from 30th May  to 30th July (1 Seat), click <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCvuvoS-jNO1znKDp9EW0iDTA2riSMhXMsgziBZ-U4nfrjbw/viewform?usp=sharingf">here</a> to apply.</li>
+                        <li><strong> Internship:</strong> Offline Two Months internship from 30th May  to 30th July (1 Seat), click <a href="/Student Internship.pdf">here</a> to apply.</li>
                         <li><strong>Upcoming Workshop:</strong> One Day Faculty Workshop  on 30th May 2025 (only 25 Seats).</li>
                     </ul>
                 </div>
