--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ background-color: #7a0f65;
     </nav>
 
     <main>
-<marquee> <h4 style="color:blue;">Ph.D. Position Available, Interested Candidates May Contact. *<a href="https://docs.google.com/forms/d/e/1FAIpQLSfCvuvoS-jNO1znKDp9EW0iDTA2riSMhXMsgziBZ-U4nfrjbw/viewform?usp=sharingf">For offline two months internship 1 Seat </a> </h4> </marquee>
+<marquee> <h4 style="color:blue;">Ph.D. Position Available, Interested Candidates May Contact. *<a href="/Student_Internship.pdf">For offline two months internship 1 Seat </a> </h4> </marquee>
         <!-- Home Tab -->
        <div id="home" class="tab-content active-tab">
                         <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
@@ -206,7 +206,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
                 <div class="updates-section">
                     <h3>Latest Updates</h3>
                     <ul align="justify">
-                        <li><strong> Internship:</strong> Offline Two Months internship from 30th May  to 30th July (1 Seat), click <a href="/Student Internship.pdf">here</a> to apply.</li>
+                        <li><strong> Internship:</strong> Offline Two Months internship from 30th May  to 30th July (1 Seat), click <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCvuvoS-jNO1znKDp9EW0iDTA2riSMhXMsgziBZ-U4nfrjbw/viewform">here</a> to apply.</li>
                         <li><strong>Upcoming Workshop:</strong> One Day Faculty Workshop  on 30th May 2025 (only 25 Seats).</li>
                     </ul>
                 </div>
