--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
                     <h3>Latest Updates</h3>
                     <ul align="justify">
                         <li><strong> Internship:</strong> Offline Two Months internship from 30th May  to 30th July (1 Seat), click <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCvuvoS-jNO1znKDp9EW0iDTA2riSMhXMsgziBZ-U4nfrjbw/viewform">here</a> to apply.</li>
-                        <li><strong>Upcoming Workshop:</strong> One Day Faculty Workshop  on 31th May 2025 (only 25 Seats). <h3 style="color:red;">Hurry up its free</h1></li>
+                        <li><strong>Upcoming Workshop:</strong> One Day Faculty Workshop  on 31th May 2025 (only 25 Seats). <h3 style="color:red;">Hurry up its a free workshop</h1></li>
                     </ul>
-			<a href="https://docs.google.com/forms/d/1zwWSUE-KrQzP5wjLn-LZu5YQ64UJQLb_nuJ__gR4QWw/"><img src="Workshop416.png" alt="Girl in a jacket"></a>
+			<a href="https://docs.google.com/forms/d/1zwWSUE-KrQzP5wjLn-LZu5YQ64UJQLb_nuJ__gR4QWw/"><img src="Facutly Workshop416.png" alt="Workshop"></a>
                 </div>
 
                 
