--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
                         <li><strong> Internship:</strong> Offline Two Months internship from 30th May  to 30th July (1 Seat), click <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCvuvoS-jNO1znKDp9EW0iDTA2riSMhXMsgziBZ-U4nfrjbw/viewform">here</a> to apply.</li>
                         <li><strong>Upcoming Workshop:</strong> One Day Faculty Workshop  on 31th May 2025 (only 25 Seats). <h3 style="color:red;">Hurry up its a free workshop</h1></li>
                     </ul>
-			<a href="https://docs.google.com/forms/d/1zwWSUE-KrQzP5wjLn-LZu5YQ64UJQLb_nuJ__gR4QWw/"><img src="Faculty Workshop416.png" alt="Workshop"></a>
+			<a href="https://docs.google.com/forms/d/1zwWSUE-KrQzP5wjLn-LZu5YQ64UJQLb_nuJ__gR4QWw/"><img src="Faculty Workshop416.png" alt="Workshop" style="width:42px;height:50px;></a>
                 </div>
 
                 
