--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
                 <div class="updates-section">
                     <h3>Latest Updates</h3>
                     <ul align="justify">
-                        <li><strong> Internship:</strong> Offline Two Months internship in June and July (1 Seat), <a href="Student_Internship.pdf">Apply.</a></li>
+                        <li><strong> Internship:</strong> Offline Two Months internship in from 30th May to 30th July 2025 (1 Seat), <a href="Student_Internship.pdf">Apply.</a></li>
                         <li><strong>Upcoming Workshop:</strong> One Day Faculty Workshop on 31th May 2025 (only 25 Seats).<h3 style="color:red;"><a href="https://docs.google.com/forms/d/1zwWSUE-KrQzP5wjLn-LZu5YQ64UJQLb_nuJ__gR4QWw/">Hurry up its a free workshop</a></h3>
 </li>
                     </ul>
