--- a/index.html
+++ b/index.html
@@ -324,9 +324,8 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 )</h2>
 					<font color="black" size="2">
 					<Ol>
-						<li>
-							S. Basak, <b>A. Gautam</B>, Diffusion-based normality pre-training for weakly supervised video anomaly detection, Expert Systems with Applications, Vol. 251, pp. 124013, 2024.
-						</li>
+						<li>  <b>A. Gautam</B>, Additive activation attention gate for segmenting meibomian glands from infrared images, Signal, Image and Video Processing, Vol. 19, No. 6, 461, 2025.</li>
+						<li> S. Basak, <b>A. Gautam</B>, Diffusion-based normality pre-training for weakly supervised video anomaly detection, Expert Systems with Applications, Vol. 251, pp. 124013, 2024. 	</li>
 					<li>  <b>A. Gautam</B>, Divyesh Rana, Saksham Aggarwal, Swaraj Bhosle, Hritik Sharma, Deep Learning Approach to Automatically Recognise License Number Plates, Multimedia Tools and Applications, Vol. 82, No. 20, pp.31487-31504, 2023 </li>	
 					<li> <b>A. Gautam</B>,  Recent Advancements of Deep Learning in Detecting Breast Cancer: A Survey, Multimedia Systems, Vol. 29, No. 3, pp.917-943, 2022 </li>
 					<li> <b>A. Gautam</B>, B. Raman, <a href="https://doi.org/10.1007/s11042-021-11342-9">"Brain Strokes Classification by Extracting Quantum Information from CT Scans"</a>, Multimedia Tools and Applications, Accepted on 26th July 2021 </li>
