--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ background-color: #7a0f65;
         <a href="#" onclick="showTab('admin')">Administrative Duty</a>
         <a href="#" onclick="showTab('student')">Students</a>
         <a href="#" onclick="showTab('research')">Research</a> 
-	<a href="#" onclick="showTab('trip')">Foreign Trip</a> 
+
     </nav>
 
     <main>
@@ -321,7 +321,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
             
 		 <h2 class="heading mb-3">Publications in Refereed Journals (<a href="https://scholar.google.com/citations?user=1xFIJOkAAAAJ&amp;hl=en&amp;oi=ao" target="_blank" class="RNpQXe" style="width: 32px; height: 32px; margin: 6px;"><img src="images/gs.png"  class="xbGufb" style="width: 32px; height: 32px;" width="32" height="32"></a>
 )</h2>
-					<font color="black" size="5">
+					<font color="black" size="3">
 					<Ol>
 					<li> <b>A. Gautam</B>, R. Shanker, Diabetic Retinopathy Detection from Fundus Images: A Wide Survey from Grading to Segmentation of Lesions, Computers in Biology and Medicine, <b>Accepted</b>, 2025.</li>
 					<li>  <b>A. Gautam</B>, Additive activation attention gate for segmenting meibomian glands from infrared images, Signal, Image and Video Processing, Vol. 19, No. 6, 461, 2025.</li>
@@ -350,7 +350,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
             
         </div>
   
-
+  </div>
 <div style="text-align:center">
   <span class="dot"></span> 
   <span class="dot"></span> 
