--- a/index.html
+++ b/index.html
@@ -273,6 +273,9 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
             <h2>Administrative Duty</h2>
             <ul>
                <li> Warden GH-3 from January 08, 2024 till now  (institute level)</li>
+				<li> <li> Member of Departmental Time-Table committee July-Dec 2025 (Department level)</li></li>
+				<li> Member of Departmental Time-Table committee Jan-June 2025 (Department level)</li>
+				
 		<li> Warden GH-1 from 1 September 2021 to January 08, 2024 (institute level)</li>
 		<li> Member of Prevention of Sexual Harassment Committee for women at workplace from 28 June 2023 till now (institute level)</li>
 		<li> Member of Departmental Time-Table committee July-Dec 2024 (Department level)</li>
@@ -323,7 +326,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 )</h2>
 					<font color="black" size="3">
 					<Ol>
-					<li> <b>A. Gautam</B>, R. Shanker, Diabetic Retinopathy Detection from Fundus Images: A Wide Survey from Grading to Segmentation of Lesions, Computers in Biology and Medicine, <b>Accepted</b>, 2025.</li>
+					<li> <b>A. Gautam</B>, R. Shanker, Diabetic Retinopathy Detection from Fundus Images: A Wide Survey from Grading to Segmentation of Lesions, Computers in Biology and Medicine, Vol. 196, pp. 110715, 2025.</li>
 					<li>  <b>A. Gautam</B>, Additive activation attention gate for segmenting meibomian glands from infrared images, Signal, Image and Video Processing, Vol. 19, No. 6, 461, 2025.</li>
 					<li> S. Basak, <b>A. Gautam</B>, Diffusion-based normality pre-training for weakly supervised video anomaly detection, Expert Systems with Applications, Vol. 251, pp. 124013, 2024. 	</li>
 					<li>  <b>A. Gautam</B>, Divyesh Rana, Saksham Aggarwal, Swaraj Bhosle, Hritik Sharma, Deep Learning Approach to Automatically Recognise License Number Plates, Multimedia Tools and Applications, Vol. 82, No. 20, pp.31487-31504, 2023 </li>	
@@ -395,3 +398,4 @@ function showSlides() {
 </body>
 
 </html>
+
