--- a/index.html
+++ b/index.html
@@ -227,11 +227,13 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
         <div id="teach" class="tab-content">
 <h2>Subjects Teaching</h2>
 <ul>
-                <li>Database Management System in B.Tech 2nd Year (Jan-June 2025) </li>
+                <li>Operating System in B.Tech 2nd Year (July-Dec 2025) </li>
+	<li>Introduction yo Machine Learning in M.Tech 1st Year (July-Dec 2025) </li>
             </ul>
 
             <h2>Subjects Taught</h2>
             <ul>
+				 <li>Database Management System in B.Tech 2nd Year (Jan-June 2025) </li>
                 <li>Computer Organization and Architecture in B.Tech 1st Year</li>
                 <li>Search Engine Optimization in MBA 3rd Sem </li>
                 <li>Operating System in B.Tech 2nd Year </li>
@@ -398,4 +400,5 @@ function showSlides() {
 </body>
 
 </html>
+
 
