--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 <h2>Subjects Teaching</h2>
 <ul>
                 <li>Operating System in B.Tech 2nd Year (July-Dec 2025) </li>
-	<li>Introduction yo Machine Learning in M.Tech 1st Year (July-Dec 2025) </li>
+	<li>Introduction to Machine Learning in M.Tech 1st Year (July-Dec 2025) </li>
             </ul>
 
             <h2>Subjects Taught</h2>
@@ -275,7 +275,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
             <h2>Administrative Duty</h2>
             <ul>
                <li> Warden GH-3 from January 08, 2024 till now  (institute level)</li>
-				<li> <li> Member of Departmental Time-Table committee July-Dec 2025 (Department level)</li></li>
+				<li> Member of Departmental Time-Table committee July-Dec 2025 (Department level)</li>
 				<li> Member of Departmental Time-Table committee Jan-June 2025 (Department level)</li>
 				
 		<li> Warden GH-1 from 1 September 2021 to January 08, 2024 (institute level)</li>
@@ -400,5 +400,6 @@ function showSlides() {
 </body>
 
 </html>
+
 
 
