--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 
             <h2>Subjects Taught</h2>
             <ul>
-				 <li>Database Management System in B.Tech 2nd Year (Jan-June 2025) </li>
+				 <li>Database Management System in B.Tech 2nd Year  </li>
                 <li>Computer Organization and Architecture in B.Tech 1st Year</li>
                 <li>Search Engine Optimization in MBA 3rd Sem </li>
                 <li>Operating System in B.Tech 2nd Year </li>
@@ -255,6 +255,8 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
         <div id="projects" class="tab-content">
             <h2>Research Projects</h2>
             <ul>
+				<li> <strong>Project Title</strong> - AI Tool Enabling Alt-Text Generation of Foundational NEP 2020 Study Materials for Blind and Visually Impaired (BVI) Students, <br> 
+				<strong>Funding Agency</strong> - Council of Science & Technology, U.P. (CSTUP), 	<strong>Duration</strong> - 3 years <br><strong>Status</strong> - Ongoing</li>
                 <li><strong>Project Title</strong> - Design and Development of Computer-Aided Diagnostic Software to Localize and Grade Eye Diseases using Deep Learning and Transformer Approaches <br>
                     <strong>Funding Agency</strong> - EMEQ-SERB, <br>
 			<strong>Sanctioned Amount</strong> - Rs. 23,04,544, <br>
@@ -400,6 +402,7 @@ function showSlides() {
 </body>
 
 </html>
+
 
 
 
