--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
 					  </Ol>
 <h2> Papers in Top Conferences </h2>
 <ol>
-<li>Gaikwad, Avinash, and <b></b>Anjali Gautam</b>. "Segmentation of Hard Exudates And Hemorrhages from Diabetic Retinopathy Images Using Residual U-Net with Squeeze and Excite Blocks." In 2024 IEEE International Conference on Image Processing (ICIP), pp. 3064-3069. IEEE, 2024.</li>
-<li>Basak, Suvramalya, Aditya Vaishy, and <b></b>Anjali Gautam</b>. "Multi-teacher Importance Preserving Knowledge Distillation for Early Violence Prediction." In International Conference on Pattern Recognition, pp. 179-195. Cham: Springer Nature Switzerland, 2024.</li>							
+<li>Gaikwad, Avinash, and <b>Anjali Gautam</b>. "Segmentation of Hard Exudates And Hemorrhages from Diabetic Retinopathy Images Using Residual U-Net with Squeeze and Excite Blocks." In 2024 IEEE International Conference on Image Processing (ICIP), pp. 3064-3069. IEEE, 2024.</li>
+<li>Basak, Suvramalya, Aditya Vaishy, and <b>Anjali Gautam</b>. "Multi-teacher Importance Preserving Knowledge Distillation for Early Violence Prediction." In International Conference on Pattern Recognition (ICPR), pp. 179-195. Cham: Springer Nature Switzerland, 2024.</li>							
 						</ol>
 <h2>My Research Awards:</h2><br
 									<ul>
@@ -402,6 +402,7 @@ function showSlides() {
 </body>
 
 </html>
+
 
 
 
