--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ Contact: +91 532 292 2535, anjaligautam@iiita.ac.in <br>
             <h2>Research Projects</h2>
             <ul>
 				<li> <strong>Project Title</strong> - AI Tool Enabling Alt-Text Generation of Foundational NEP 2020 Study Materials for Blind and Visually Impaired (BVI) Students, <br> 
-				<strong>Funding Agency</strong> - Council of Science & Technology, U.P. (CSTUP), 	<br><strong>Duration</strong> - 3 years <br><strong>Status</strong> - Ongoing</li><br>
+				<strong>Funding Agency</strong> - Council of Science & Technology, U.P. (CSTUP), 	<br><strong>Duration</strong> - 3 years <br><strong>Status</strong> - Ongoing, <strong>Role:</strong> Co-PI</li><br>
                 <li><strong>Project Title</strong> - Design and Development of Computer-Aided Diagnostic Software to Localize and Grade Eye Diseases using Deep Learning and Transformer Approaches <br>
                     <strong>Funding Agency</strong> - EMEQ-SERB, <br>
 			<strong>Sanctioned Amount</strong> - Rs. 23,04,544, <br>
@@ -402,6 +402,7 @@ function showSlides() {
 </body>
 
 </html>
+
 
 
 
